[gd_scene load_steps=4 format=3 uid="uid://bm1km3un4txo5"]

[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1_6c2hd"]

[sub_resource type="InputEventAction" id="InputEventAction_xhfiq"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_h5jgc"]
events = [SubResource("InputEventAction_xhfiq")]

[node name="PauseMenu" type="Node"]
script = ExtResource("1_6c2hd")

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="MenuContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeBtn" type="Button" parent="PauseMenu/MenuContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_h5jgc")
text = "VOLTAR"

[node name="QuitBtn" type="Button" parent="PauseMenu/MenuContainer"]
layout_mode = 2
text = "SAIR"

[connection signal="pressed" from="PauseMenu/MenuContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="PauseMenu/MenuContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
